# DRL_Racers

./: .gitignore  Dataset_Generator.py  Gifmaker.py  README.md  Racers_Agent.py  Racers_GUI.py  Racers_GUI_Show_Me.py  Racers_GUI_Supervised.py  Racers_Launcher.py  Racers_Train.py  Racers_Train_A2C.py  Racers_Train_A2C_Lin.py  Racers_Wrapper.py  Racers_Wrapper_Linear.py  Todo  tempCodeRunnerFile.py  test.py
Custom_Keymapper/: Custom_Keymapper.cp38-win_amd64.ilk  Custom_Keymapper.cp38-win_amd64.pyd  Custom_Keymapper.exp  Custom_Keymapper.lib  pybind11module.cp38-win_amd64.ilk  pybind11module.cp38-win_amd64.pyd  pybind11module.lib
Custom_Keymapper/OLD/: pybind11module.cp38-win_amd64.ilk  pybind11module.cp38-win_amd64.pyd  pybind11module.exp
Resources/: LEGORacers.lnk
Resources/Old/: Game_Interface.py  Game_Wrapper.py  Global_Launcher.py  Minmap_Coords.py  Monitor_GUI.py  Neural_Network.py
Test Files/: Bar_test.py  Blender.py  Dataset_Loader.py  Genetic_Algorithm_Example.py  Image_scale_calc.py  Key_Reader.py  MSS_testfile.py  Watermark.py  guage_test.py
Test Files/CPP_Source_Code/Source_Code/: PyDirectInput_X.py  keymapper_FINAL.cpp  module2.cpp  time_function_X.cpp
Test Files/CPP_Source_Code/Source_Code/Old/: keymapper_Test.cpp
Test Files/CPP_Source_Code/work_site/module/: module.cpp
Test Files/Pybind11/: instructions.txt
Test Files/Pybind11/Source_Code/: keymapper.h  module3.cpp  setup.py  tempCodeRunnerFile.cpp
Test Files/Pybind11/Source_Code/Old/: Racers_Wrapper_ORIGINAL.py  keymapper.cpp
Test Files/Pybind11/work_site/: CMakeLists.txt
